# RobotCode2026Public6328

./: .gitattributes  .gitignore  README.md  build.gradle
.github/workflows/: close-pull-requests.yml
ascope_assets/Joystick_OperatorConsole/: config.json
ascope_assets/Joystick_RazerWolverine/: config.json
ascope_assets/Robot_AlphaBot/: config.json  model_1.glb
docs/: ObjectDetection.md  PhoenixFrames.md
hubcounter/: .gitignore  README.md  config.yaml  hub.service  main.py  nt_control.py  pyproject.toml  requirements.txt  shop_deploy.sh
hubcounter/docs/: initial-prompt.txt
hubcounter/hub_counter/: __init__.py  __main__.py  app.py
hubcounter/hub_counter/config/: __init__.py  settings.py
hubcounter/hub_counter/core/: __init__.py  events.py  models.py
hubcounter/hub_counter/gpio/: __init__.py  ball_counter.py  channel_monitor.py  mock_gpio.py
hubcounter/hub_counter/led/: __init__.py  controller.py  mock_led.py
hubcounter/hub_counter/network/: __init__.py  nt_client.py
hubcounter/hub_counter/web/: __init__.py  server.py
hubcounter/hub_counter/web/routes/: __init__.py  api.py
hubcounter/hub_counter/web/static/: app.js  index.html  styles.css
hubcounter/tests/: __init__.py  test_api.py  test_ball_counter.py
northstar/: __init__.py  objdetect_worker.py
northstar/config/: ConfigSource.py  config.py
northstar/output/: VideoWriter.py  overlay_util.py
northstar/pipeline/: Capture.py  ObjectDetector.py
sim/: README.md  Simulation Key Mapping.html  simgui-ds.json  simgui-window.json  simgui.json
vendordeps/: ChoreoLib.json
(+63 files in other folders)
